more implementations: - try resource changed by UniResource